chore(deps): 升级 Gradle 版本至8.10.2
- 将 gradle-wrapper.properties 中的 Gradle 发行版 URL 更新为 8.10.2
- 同步更新相关插件及依赖配置文件以兼容新版本 Gradle
- 调整部分构建脚本逻辑以适配新版 Gradle 行为变更
- 确保所有基于 Gradle 的任务在新环境下正常运行
- 验证并修复因版本升级可能导致的兼容性问题
- 完成对插件描述、图标资源及相关动作处理器的同步修改